--- a/ubossweb/relation.html
+++ b/ubossweb/relation.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>申请提现</title>
+		<title>我的人脉</title>
 		<link type="text/css" href="css/css.css" rel="stylesheet" />
 	</head>
 	<body>
@@ -20,8 +20,16 @@
 				</ul>
 			</div>
 		</div>
-		<div class="main_order">
-			
+		<div class="main_relation">
+			<div class="relation_title">
+				<div class="mrelation"><img src="img/list_2.png" height="32" width="38" /><span class="mrelation_t">我的人脉</span></div>
+				<div class="t_relation_val">10人</div>
+			</div>
+			<ul class="relation_list">
+				<li><div class="relation_name">一级会员</div><div class="relation_val">10人</div></li>
+				<li><div class="relation_name">二级会员</div><div class="relation_val">20人</div></li>
+				<li><div class="relation_name">三级会员</div><div class="relation_val">30人</div></li>
+			</ul>
 		</div>
 		
 		<div class="bottom">
