--- a/ubossweb/relation.html
+++ b/ubossweb/relation.html
@@ -4,6 +4,17 @@
 		<meta charset="utf-8" />
 		<title>我的人脉</title>
 		<link type="text/css" href="css/css.css" rel="stylesheet" />
+		<script type="text/javascript" src="js/jq.js"></script>
+		<script type="text/javascript">
+			$(function(){
+				$('.rel_list').click(
+					function(){
+						$('.rel_list ~ ul').slideUp();
+						$(this).next('.member').slideDown();
+					}
+				);
+			});
+		</script>
 	</head>
 	<body>
 		<div class="top_nav">
@@ -26,9 +37,36 @@
 				<div class="t_relation_val">10人</div>
 			</div>
 			<ul class="relation_list">
-				<li><div class="relation_name">一级会员</div><div class="relation_val">10人</div></li>
-				<li><div class="relation_name">二级会员</div><div class="relation_val">20人</div></li>
-				<li><div class="relation_name">三级会员</div><div class="relation_val">30人</div></li>
+				<li>
+					<div class="rel_list">
+						<div class="relation_name">1级会员</div>
+						<div class="relation_val">10人</div>
+					</div>
+					<ul class="member rel_dis">
+						<li>1凯</li>
+						<li>1强</li>
+					</ul>					
+				</li>
+				<li>
+					<div class="rel_list">
+						<div class="relation_name">2级会员</div>
+						<div class="relation_val">10人</div>
+					</div>
+					<ul class="member rel_dis">
+						<li>2凯</li>
+						<li>2强</li>
+					</ul>					
+				</li>
+				<li>
+					<div class="rel_list">
+						<div class="relation_name">3级会员</div>
+						<div class="relation_val">10人</div>
+					</div>
+					<ul class="member rel_dis">
+						<li>3凯</li>
+						<li>3强</li>
+					</ul>					
+				</li>
 			</ul>
 		</div>
 		
